# lunar-lamp

./: README.md  hello.py  lunar-lamp.ipynb  lunar-surface.ipynb  pyproject.toml
model/: lunar-lamp-print.blend
